--- a/_includes/head.html
+++ b/_includes/head.html
@@ -11,5 +11,12 @@
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}">
   <script type="text/javascript"
   src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
-</script>
+  MathJax.Hub.Config({
+    tex2jax: {
+      inlineMath: [ ['\\[','\\]'], ['\\(','\\)'] ],
+      displayMath: [ ['$$','$$'] ],
+      processEscapes: true
+    }
+  });
+  </script>
 </head>
