--- a/_includes/head.html
+++ b/_includes/head.html
@@ -13,8 +13,9 @@
   src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
   MathJax.Hub.Config({
     tex2jax: {
-      inlineMath: [ ['\\[','\\]'], ['\\(','\\)'] ],
-      displayMath: [ ['$$','$$'] ],
+      inlineMath: [ ['\\(','\\)'] ],
+      displayMath: [ ['$$','$$'], ['\\[','\\]'] ],
+      skipTags: ["script","noscript","style","textarea","pre"],
       processEscapes: true
     }
   });
