--- a/_includes/header.html
+++ b/_includes/header.html
@@ -15,7 +15,9 @@
 
       <div class="trigger">
         {% for my_page in site.pages %}
-          {% if my_page.title %}
+          {% assign lvl = my_page.url | split: "/" | size %}
+          
+          {% if lvl < 3 and my_page.title %}
           <a class="page-link" href="{{ my_page.url | prepend: site.baseurl }}">{{ my_page.title }}</a>
           {% endif %}
         {% endfor %}
