--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,9 +1,6 @@
 <header class="site-header">
-
   <div class="wrapper">
-
     <a class="site-title" href="{{ site.baseurl }}/">{{ site.title }}</a>
-
     <nav class="site-nav">
       <a href="#" class="menu-icon">
         <svg viewBox="0 0 18 15">
@@ -12,18 +9,14 @@
           <path fill="#424242" d="M18,13.516C18,14.335,17.335,15,16.516,15H1.484C0.665,15,0,14.335,0,13.516l0,0 c0-0.82,0.665-1.484,1.484-1.484h15.031C17.335,12.031,18,12.696,18,13.516L18,13.516z"/>
         </svg>
       </a>
-
       <div class="trigger">
-        {% for my_page in site.pages %}
-          {% assign lvl = my_page.url | split: "/" | size %}
-          
-          {% if lvl < 3 and my_page.title %}
+        {%- for my_page in site.pages -%}
+          {%- assign lvl = my_page.url | split: "/" | size -%}
+          {%- if lvl < 3 and my_page.title -%}
           <a class="page-link" href="{{ my_page.url | prepend: site.baseurl }}">{{ my_page.title }}</a>
-          {% endif %}
-        {% endfor %}
+          {%- endif -%}
+        {%- endfor -%}
       </div>
     </nav>
-
   </div>
-
 </header>
